--- a/AutoDrivingCarSimulation.Test/AutoDrivingCarSimulation.Test.csproj
+++ b/AutoDrivingCarSimulation.Test/AutoDrivingCarSimulation.Test.csproj
@@ -20,4 +20,8 @@
     <Using Include="Xunit"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AutoDrivingCarSimulation.Solution\AutoDrivingCarSimulation.Solution.csproj" />
+  </ItemGroup>
+
 </Project>
