refactored code for part 1 and created new project for part 2

--- a/AutoDrivingCarSimulation.Test/AutoDrivingCarSimulation.Test.csproj
+++ b/AutoDrivingCarSimulation.Test/AutoDrivingCarSimulation.Test.csproj
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoDrivingCarSimulation.Solution\AutoDrivingCarSimulation.Solution.csproj" />
+    <ProjectReference Include="..\AutoDrivingCarSimulation.SolutionPart1\AutoDrivingCarSimulation.SolutionPart1.csproj" />
+    <ProjectReference Include="..\AutoDrivingCarSimulation.SolutionPart2\AutoDrivingCarSimulation.SolutionPart2.csproj" />
   </ItemGroup>
 
 </Project>
