--- a/AutoDrivingCarSimulation.SolutionPart2/AutoDrivingCarSimulation.SolutionPart2.csproj
+++ b/AutoDrivingCarSimulation.SolutionPart2/AutoDrivingCarSimulation.SolutionPart2.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AutoDrivingCarSimulation.Business\AutoDrivingCarSimulation.Business.csproj" />
+  </ItemGroup>
+
 </Project>
